--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version-file: 'go.mod'
+      - name: cognitive-complexity
+        severity: warning
+        disabled: false
+        arguments: [7]
           cache: true
       - name: Verify Go modules
         run: go mod verify
